--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <P>Это мой первый сайт</P>
-
+    <p>
+        <input type="button" value="нажми меня!" style="font-size: 30px; color:rgb(105, 5, 115)">
+    </p>
 </body>
 
 </html>
