wrote about the button in readme

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <P>Это мой первый сайт</P>
     <p>
-        <input type="button" value="нажми меня!" style="font-size: 30px; color:rgb(105, 5, 115)">
+        <input type="button" onclick="say_hi()" value="нажми меня!" style="font-size: 30px; color:rgb(105, 5, 115)">
     </p>
 </body>
 
